# Delta_DBot

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE.txt
headers/: bot.h  bot_delta.h  bot_delta_data.h  defines.h  export.h  mln.h  version.h
headers/commands/: add_emoji.h  add_role.h  avatar.h  base_action.h  base_command.h  blep.h  bot_info.h  button.h  button2.h  channel_create.h  co_button.h  db.h  dialog.h  file.h  help.h  image.h  math.h  msg_error.h  msgs_get.h  ping.h  pm.h  pong.h  pring.h  report.h  select.h  select2.h  select3.h  show.h  thinking.h
headers/commands/ctx/: base_ctx_command.h  high_five.h
headers/commands/guild/create/: base_guild_create.h  insert_guild_db.h
headers/commands/ready/: base_ready.h  register_commands.h
headers/commands/slash/: add_emoji.h  add_role.h  avatar.h  base_slashcommand.h  bot_info.h  changelog.h  db.h  help.h  msgs_get.h  ping.h  pm.h  report.h
headers/commands/slash/db/: base_db_command.h  db.h  db_cmd_data.h  db_command_type.h  db_config.h  db_delete.h  db_help.h  db_init_type_flag.h  db_insert.h  db_insert_update.h  db_privacy.h  db_select.h  db_show.h  db_show_records.h  db_update.h  db_update_description.h  db_update_dump_channel.h  url_type.h
headers/commands/slash/mog/: arma.h  base_mog_command.h  cmd_data.h  command_type.h  init_type_flag.h  mog.h  mog_arma.h  mog_cmd_data.h  mog_command_type.h  mog_help.h  mog_init_type_flag.h  mog_team.h  mog_team_data.h  team.h  team_data.h
headers/commands/slash/mog/arma/: create_team.h  delete_team.h
headers/ctx/: high_five.h
headers/database/: database_callbacks.h  database_handler.h  db_authorizer_code.h  db_checkpoint_mode.h  db_column_data.h  db_config_option.h  db_connection_config_option.h  db_destructor_behavior.h  db_flag.h  db_fundamental_datatype.h  db_prepare_flag.h  db_result.h  db_saved_stmt_state.h  db_status_param.h  db_text_encoding.h  db_xaccess_flag.h
headers/enum/: flags.h
headers/events/: autocomplete_runner.h  base_event.h  base_runner.h  button_click_runner.h  cmd_ctx_runner.h  cmd_runner.h  form_submit_runner.h  guild_create_runner.h  message_create_runner.h  msg_react_remove_runner.h  ready_runner.h  select_click_runner.h
headers/general/: commands.h  ctxs.h  databases.h  events.h  utilities.h
headers/ready/: register_commands.h
headers/security/: crypt.h
headers/threads/: jobs_runner.h
headers/time/: chronometer.h  time.h
headers/utility/: cache.h  caches.h  constants.h  event_data_lite.h  http_err.h  json_err.h  logs.h  perms.h  reply_log_data.h  response.h  time.h  url.h  utility.h
source/: bot.cpp  bot_delta.cpp  main.cpp
source/commands/: add_emoji.cpp  add_role.cpp  avatar.cpp  blep.cpp  bot_info.cpp  button.cpp  button2.cpp  channel_create.cpp  co_button.cpp  db.cpp  dialog.cpp  file.cpp  help.cpp  image.cpp  math.cpp  msg_error.cpp  msgs_get.cpp  ping.cpp  pm.cpp  pong.cpp  pring.cpp  report.cpp  select.cpp  select2.cpp  select3.cpp  show.cpp  thinking.cpp
source/commands/ctx/: base_ctx_command.cpp  high_five.cpp
source/commands/guild/create/: base_guild_create.cpp  insert_guild_db.cpp
source/commands/ready/: base_ready.cpp  register_commands.cpp
source/commands/slash/: add_emoji.cpp  add_role.cpp  avatar.cpp  base_slashcommand.cpp  bot_info.cpp  changelog.cpp  db.cpp  help.cpp  msgs_get.cpp  ping.cpp  pm.cpp  report.cpp
source/commands/slash/db/: base_db_command.cpp  db.cpp  db_cmd_data.cpp  db_command_type.cpp  db_config.cpp  db_delete.cpp  db_help.cpp  db_insert.cpp  db_insert_update.cpp  db_privacy.cpp  db_select.cpp  db_show.cpp  db_show_records.cpp  db_update.cpp  db_update_description.cpp  db_update_dump_channel.cpp
source/commands/slash/mog/: arma.cpp  base_mog_command.cpp  command_type.cpp  mog.cpp  mog_arma.cpp  mog_cmd_data.cpp  mog_command_type.cpp  mog_help.cpp  mog_team.cpp  mog_team_data.cpp  team.cpp  team_data.cpp
source/commands/slash/mog/arma/: create_team.cpp
source/ctx/: high_five.cpp
source/database/: database_handler.cpp  db_saved_stmt_state.cpp
source/events/: autocomplete_runner.cpp  button_click_runner.cpp  cmd_ctx_runner.cpp  cmd_runner.cpp  form_submit_runner.cpp  guild_create_runner.cpp  message_create_runner.cpp  msg_react_remove_runner.cpp  ready_runner.cpp  select_click_runner.cpp
source/ready/: register_commands.cpp
source/security/: crypt.cpp
source/threads/: jobs_runner.cpp
source/time/: chronometer.cpp  time.cpp
source/utility/: caches.cpp  constants.cpp  event_data_lite.cpp  http_err.cpp  json_err.cpp  logs.cpp  perms.cpp  reply_log_data.cpp  response.cpp  time.cpp  utility.cpp
test/headers/: autocomplete_runner.h  base_autocomplete.h  blep.h  button.h  button_click_runner.h  image.h  math.h  msg_error.h  msg_react_remove_runner.h  pong.h  pring.h  select3.h  thinking.h
test/source/: autocomplete_runner.cpp  base_autocomplete.cpp  blep.cpp  button.cpp  button2.cpp  button_click_runner.cpp  channel_create.cpp  co_button.cpp  form_submit_runner.cpp  image.cpp  main.cpp  math.cpp  message_create_runner.cpp  msg_react_remove_runner.cpp  pong.cpp  select2.cpp  select3.cpp  select_click_runner.cpp  thinking.cpp
